--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: dart pub get
-    - Name: Analyze code
+    - name: Analyze code
       run: dart analyze
     - name: Run tests
       run: dart test
