--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Report version
+      run: dart --version
     - name: Install dependencies
       run: dart pub get
     - name: Analyze code
