--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: dart pub get
+    - name: Check formatting
+      run: ./scripts/check_formatting.sh
     - name: Analyze code
       run: dart analyze
     - name: Run tests
