--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -8,11 +8,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     container:
-      image:  google/dart:latest
+      image: google/dart:latest
 
     steps:
     - uses: actions/checkout@v2
@@ -25,5 +24,14 @@ jobs:
       run: ./.github/scripts/check_formatting.sh
     - name: Analyze code
       run: dart analyze
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest, macos-latest, windows-latest
+
+    container:
+      image: google/dart:latest
+
+    steps:
     - name: Run tests
       run: dart test
