--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -27,7 +27,10 @@ jobs:
 
   test:
     needs: analyze
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+      os: [ubuntu-latest, macos-latest, windows-latest]
 
     container:
       image: google/dart:latest
