--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,12 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  analyze:
     runs-on: ubuntu-latest
 
     container:
-      image:  google/dart:latest
+      image: google/dart:latest
 
     steps:
     - uses: actions/checkout@v2
@@ -25,5 +24,17 @@ jobs:
       run: ./.github/scripts/check_formatting.sh
     - name: Analyze code
       run: dart analyze
+
+  test:
+    needs: analyze
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    container:
+      image: google/dart:latest
+
+    steps:
     - name: Run tests
       run: dart test
