--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,9 +2,9 @@ name: Dart CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   analyze:
@@ -14,16 +14,15 @@ jobs:
       image: google/dart:latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Report version
-      run: dart --version
-    - name: Install dependencies
-      run: dart pub get
-    - name: Check formatting
-      # TODO: Change this once https://github.com/dart-lang/sdk/issues/44023 is fixed
-      run: ./.github/scripts/check_formatting.sh
-    - name: Analyze code
-      run: dart analyze
+      - uses: actions/checkout@v2
+      - name: Report version
+        run: dart --version
+      - name: Install dependencies
+        run: dart pub get
+      - name: Check formatting
+        run: dart format --output=none --set-exit-if-changed .
+      - name: Analyze code
+        run: dart analyze
 
   test:
     needs: analyze
@@ -31,10 +30,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-
-    container:
-      image: google/dart:latest
-
     steps:
-    - name: Run tests
-      run: dart test
+      - uses: actions/checkout@v2
+      - uses: cedx/setup-dart@v2
+        with:
+          release-channel: stable
+      - name: Run tests
+        run: dart test
