--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,7 +32,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
-      - uses: mit-mit/install-dart@master
+      - uses: mit-mit/install-dart@main
         with:
           release-channel: stable
       - name: Report version
