--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -31,7 +31,7 @@ jobs:
         channel: [stable, beta, dev]
     steps:
       - uses: actions/checkout@v2
-      - uses: mit-mit/setup-dart@main
+      - uses: dart-lang/setup-dart@v0.1
         with:
           channel: ${{ matrix.channel }}
       - name: Install dependencies
