--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,21 +12,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v0.1
+        with:
+          channel: stable
       - name: Cache pub packages
         uses: actions/cache@v2
         with:
           # Cache pub hosted directory, which contains packages downloaded from pub.dev.
           path: "~/.pub-cache/hosted"
-          # Use this string is as the cache key (the templated values will be filled in when the task is running)
-          key: "os:ubuntu-latest;pub-cache-hosted;dart:${{ matrix.sdk }};packages:${{ github.repository }}"
-          # Try to find existing caches to initialize this case with, it will use the first match
+          key: "os:ubuntu-latest;pub-cache-hosted;dart:stable;packages:${{ github.repository }}"
           restore-keys: |
-            os:${{ matrix.os }};pub-cache-hosted;dart:${{ matrix.sdk }};packages:${{ github.repository }}
-            os:${{ matrix.os }};pub-cache-hosted;dart:${{ matrix.sdk }}
+            os:${{ matrix.os }};pub-cache-hosted;dart:stable;packages:${{ github.repository }}
+            os:${{ matrix.os }};pub-cache-hosted;dart:stable
             os:${{ matrix.os }};pub-cache-hosted
-      - uses: dart-lang/setup-dart@v0.1
-        with:
-          channel: stable
       - name: Install dependencies
         run: dart pub get
       - name: Check formatting
@@ -46,6 +44,16 @@ jobs:
       - uses: dart-lang/setup-dart@v0.1
         with:
           channel: ${{ matrix.channel }}
+      - name: Cache pub packages
+        uses: actions/cache@v2
+        with:
+          # Cache pub hosted directory, which contains packages downloaded from pub.dev.
+          path: "~/.pub-cache/hosted"
+          key: "os:ubuntu-latest;pub-cache-hosted;${{ matrix.channel }};packages:${{ github.repository }}"
+          restore-keys: |
+            os:${{ matrix.os }};pub-cache-hosted;dart:${{ matrix.channel }};packages:${{ github.repository }}
+            os:${{ matrix.os }};pub-cache-hosted;dart:${{ matrix.channel }}
+            os:${{ matrix.os }};pub-cache-hosted
       - name: Install dependencies
         run: dart pub get
       - name: Run tests
