--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,34 +7,42 @@ on:
     branches: [main]
 
 jobs:
-  analyze:
-    runs-on: ubuntu-latest
-
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        sdk: [stable, beta, dev]
     steps:
       - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v0.1
+      - uses: dart-lang/setup-dart
         with:
-          channel: stable
+          sdk: ${{ matrix.sdk }}
       - name: Install dependencies
         run: dart pub get
       - name: Check formatting
         run: dart format --output=none --set-exit-if-changed .
       - name: Analyze code
         run: dart analyze
+      - name: Run tests
+        run: dart test
 
-  test:
-    needs: analyze
+  test_old_sdks:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        channel: [stable, beta, dev]
+        sdk: [2.9.0, 2.8.0]
     steps:
       - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v0.1
+      - uses: dart-lang/setup-dart
         with:
-          channel: ${{ matrix.channel }}
+          sdk: ${{ matrix.sdk }}
       - name: Install dependencies
-        run: dart pub get
+        run: pub get
+      - name: Check formatting
+        run: dartfmt --dry-run --set-exit-if-changed .
+      - name: Analyze code
+        run: dartanalyzer --fatal-warnings .
       - name: Run tests
-        run: dart test
+        run: pub run test
