--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -27,7 +27,27 @@ jobs:
       - name: Run tests
         run: dart test
 
-  test_old_sdks:
+  test_deprecated:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        channel: [stable, beta, dev]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@main
+        with:
+          channel: ${{ matrix.channel }}
+      - name: Install dependencies
+        run: dart pub get
+      - name: Check formatting
+        run: dart format --output=none --set-exit-if-changed .
+      - name: Analyze code
+        run: dart analyze
+      - name: Run tests
+        run: dart test
+
+test_old_sdks:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
