--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -34,8 +34,8 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         channel: [stable, beta, dev]
     steps:
-      - uses: actions/checkout@v0.1
-      - uses: dart-lang/setup-dart@main
+      - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v0.2
         with:
           channel: ${{ matrix.channel }}
       - name: Install dependencies
