--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: [stable, beta, dev]
+        sdk: [stable, beta, dev, main]
     steps:
       - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v0.2
+      - uses: dart-lang/setup-dart@v0.3
         with:
           sdk: ${{ matrix.sdk }}
       - name: Install dependencies
